   and display the cached files, including:
   - 'media cache show <all>' - show all cached media files, or details about
     one particular cached media file
   - 'media cache refresh <item>' - force a refresh of a particular media file
     in the cache
   - 'media cache delete <item>' - remove an item from the cache
   - 'media cache create <uri>' - retrieve a URI and store it in the cache


Functions
------------------

CHANNEL
------------------
 * Added CHANNEL(onhold) item that returns 1 (onhold) and 0 (not-onhold) for
   the hold status of a channel.

CURL
------------------
 * The CURL function now supports a write option, which will save the retrieved
   file to a location on disk. As an example:
     same => n,Set(CURL(https://1.1.1.1/foo.wav)=/tmp/foo.wav)
   will save 'foo.wav' to /tmp.

DTMF Features
------------------
 * The transferdialattempts default value has been changed from 1 to 3. The
   transferinvalidsound has been changed from "pbx-invalid" to "privacy-incorrect".
   These were changed to make DTMF transfers be more user-friendly by default.


Resources
------------------

res_http_media_cache
------------------
 * A backend for the core media cache, this module retrieves media files from
   a remote HTTP(S) server and stores them in the core media cache for later
   playback.

res_musiconhold
------------------
 * Added sort=randstart to the sort options. It sorts the files by name and
   then chooses the first file to play at random.
 * Added preferchannelclass=no option to prefer the application-passed class
   over the channel-set musicclass. This allows separate hold-music from
   application (e.g. Queue or Dial) specified music.

res_resolver_unbound
------------------
 * Added a res_resolver_unbound module which uses the libunbound resolver library
   to perform DNS resolution. This module requires the libunbound library to be
   installed in order to be used.

res_pjsip
------------------